force-app/main/default/objects/Request__c/fields/Film__c.field-meta.xml
<CustomField>
    <fullName>Film__c</fullName>
    <label>Film</label>
    <type>Lookup</type>
    <referenceTo>Film__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
</CustomField>