force-app/main/default/objects/Request__c/fields/RequestedTitle__c.field-meta.xml
<CustomField>
    <fullName>RequestedTitle__c</fullName>
    <label>Requested Title</label>
    <type>Text</type>
    <length>255</length>
</CustomField>