force-app/main/default/objects/Request__c/fields/RequestedYear__c.field-meta.xml
<CustomField>
    <fullName>RequestedYear__c</fullName>
    <label>Requested Year</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>