force-app/main/default/objects/Request__c/fields/RequesterName__c.field-meta.xml
<CustomField>
    <fullName>RequesterName__c</fullName>
    <label>Requester Name</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>