force-app/main/default/objects/Request__c/validationRules/Require_Film_or_Title.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Film_or_Title</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Film__c), ISBLANK(RequestedTitle__c))</errorConditionFormula>
    <errorMessage>Provide a Film or Requested Title.</errorMessage>
    <errorDisplayField>RequestedTitle__c</errorDisplayField>
</ValidationRule>